--- a/index.html
+++ b/index.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/bb534c52d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css\utilities.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <title>FinCo. | Welcome</title>
+    <link rel="stylesheet" href="css\style.css">
+    <title>FinCo | Homepage</title>   
 </head>
-<body>
-    <header class="main-head">
-        <div id="nav-bar">
-            <h1 class="logo"><span class="text-primary"><i class="fas fa-hand-holding-usd"></i> Fin</span>Co.</h1>
-            <ul>
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#About">About</a></li>
-                <li><a href="#Cases">Cases</a></li>
-                <li><a href="#Blog">About</a></li>
-                <li><a href="#Contact">Contact</a></li>
-            </ul>
+<body id="home">
+    <div class="top-design">
+        <div id="navbar" class="navbar">
+            <h1 class="logo">
+                <span class="text-primary"><i class="fas fa-coins"></i> Fin</span>Co
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Cases">Cases</a></li>
+                    <li><a href="#Blog">Blog</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
 
         <div class="content">
-            <h1>The sky is the limit.</h1>
-            <p>Providing world class financial assistance</p>
-            <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
+            <h1>Sky is the limit.</h1>
+            <p>World Class Financial Assistance.</p>
+            <a class="btn" href="#about"><i class="fas fa-chevron-right"></i> Read More</a>
         </div>
-    </header>
+    </div>
 </body>
 </html>
