--- a/index.html
+++ b/index.html
@@ -10,27 +10,104 @@
     <title>FinCo | Homepage</title>   
 </head>
 <body id="home">
-    <div class="top-design">
-        <div id="navbar" class="navbar">
-            <h1 class="logo">
-                <span class="text-primary"><i class="fas fa-coins"></i> Fin</span>Co
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#About">About</a></li>
-                    <li><a href="#Cases">Cases</a></li>
-                    <li><a href="#Blog">Blog</a></li>
-                    <li><a href="#Contact">Contact</a></li>
-                </ul>
-            </nav>
+    <header>
+        <div class="top-design">
+            <div id="navbar" class="navbar">
+                <h1 class="logo">
+                    <span class="text-primary"><i class="fas fa-coins"></i> Fin</span>Co
+                </h1>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#cases">Cases</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="content">
+                <h1>Sky is the limit.</h1>
+                <p>World Class Financial Assistance.</p>
+                <a class="btn" href="#about"><i class="fas fa-chevron-right"></i> Read More</a>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <!--About : icons-->
+        <div id="about" class="icons bg-light">
+            <div class="flex-items">
+                    <div>
+                        <i class="fas fa-university fa-2x"></i>
+                        <div>
+                            <h3>Investment Banking</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, aspernatur.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <i class="fas fa-book fa-2x"></i>
+                        <div>
+                            <h3>Investment Banking</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, aspernatur.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <i class="fas fa-pen fa-2x"></i>
+                        <div>
+                            <h3>Investment Banking</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, aspernatur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!--About: Solutions-->
+        <div class="solutions flex-columns">
+            <div class="column">
+                <div class="column-1">
+                    <img src="./images/about/services.jpg" alt="">
+                </div>
+            </div>
+            
+            <div class="column">
+                <div class="column-2 bg-primary">
+                    <h4>What are you looking for</h4>
+                    <h1>We provide best in class services and solutions</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia magni minus facere? Ad, blanditiis vero, velit debitis necessitatibus accusantium fuga ipsum consectetur sequi numquam quae delectus iure libero aspernatur quos!</p>
+                    <a class="btn btn-outline" href="#home"><i class="fas fa-chevron-right"></i> Read More</a>
+                </div>
+            </div>
         </div>
 
-        <div class="content">
-            <h1>Sky is the limit.</h1>
-            <p>World Class Financial Assistance.</p>
-            <a class="btn" href="#about"><i class="fas fa-chevron-right"></i> Read More</a>
-        </div>
-    </div>
+        <!--Cases-->
+        <section id="cases" class="flex-grid section-padding">
+            <header class="section-header">
+                <h4>This is what we do.</h4>
+                <h1>Managed Cases</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi, libero.</p>
+            </header>
+            <div class="row">
+                <div class="column">
+                    <img src="./images/cases/cases-1.jpg" alt="">
+                    <img src="./images/cases/cases-2.jpg" alt="">
+                </div>
+                <div class="column">
+                    <img src="./images/cases/cases-3.jpg" alt="">
+                    <img src="./images/cases/cases-4.jpg" alt="">
+                </div>
+                <div class="column">
+                    <img src="./images/cases/cases-5.jpg" alt="">
+                    <img src="./images/cases/cases-6.jpg" alt="">
+                </div>
+                <div class="column">
+                    <img src="./images/cases/cases-7.jpg" alt="">
+                    <img src="./images/cases/cases-8.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
