cases team & footer

--- a/index.html
+++ b/index.html
@@ -108,6 +108,99 @@
                 </div>
             </div>
         </section>
+
+        <section id="blog">
+            <div class="flex-columns">
+                <div class="column">
+                    <div class="column-2 bg-secondary">
+                        <h4>What are you looking for</h4>
+                        <h1>We provide best in class services and solutions</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia magni minus facere? Ad, blanditiis vero, velit debitis necessitatibus accusantium fuga ipsum consectetur sequi numquam quae delectus iure libero aspernatur quos!</p>
+                        <a class="btn btn-outline btn-secondary" href="#home"><i class="fas fa-chevron-right"></i> Read More</a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-1">
+                        <img src="./images/cases/services-1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            
+            <!--Teams-->
+            <section class="team">
+                <header class="section-header">
+                    <h4>Who are we</h4>
+                    <h2>Our Team</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi, libero.</p>
+                </header>
+                <div class="flex-items">
+                    <div>
+                        <img src="./images/cases/team-batman.jpg" alt="">
+                        <div>
+                            <h3>Bat-Man</h3>
+                            <p>Chief Executive Officer</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/cases/team-ironman.jpg" alt="">
+                        <div>
+                            <h3>Iron-Man</h3>
+                            <p>Cheif Financial Officer</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/cases/team-superman.jpg" alt="">
+                        <div>
+                            <h3>Super-Man</h3>
+                            <p>Chief Operating Officer</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <section id="contact" class="flex-columns">
+            <div class="column">
+                <div class="column-1">
+                    <img src="./images/contact/contact-2.png" alt="">
+                </div>
+            </div>
+            
+            <div class="column">
+                <div class="column-2 contact-form">
+                    <h4>Need our help?</h4>
+                    <h1>Request Callback</h1>
+                    <label>First Name</label>
+                    <input type="text"></input>
+                    <label>Last Name</label>
+                    <input type="text"></input>
+                    <label>Email</label>
+                    <input type="email"></input>
+                    <a class="btn btn-outline" href="#home"><i class="fas fa-chevron-right"></i> Submit</a>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="social-media">
+            <div>
+                <i class="fab fa-facebook fa-3x"></i>
+            </div>
+            <div>
+                <i class="fab fa-twitter fa-3x"></i>
+            </div>
+            <div>
+                <i class="fab fa-instagram fa-3x"></i>
+            </div>
+            <div>
+                <i class="fab fa-youtube fa-3x"></i>
+            </div>
+        </div>
+
+        <div>
+            Copyright <i class="far fa-copyright"></i> 2020, Pranav Shukla
+        </div>
+    </footer>
 </body>
 </html>
