media queries -begin -incomplete

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="column">
                     <div class="column-1">
-                        <img src="./images/cases/services-1.jpg" alt="">
+                        <img class ="services-img" src="./images/cases/services-1.jpg" alt="">
                     </div>
                 </div>
             </div>
