--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h4>What are you looking for</h4>
                         <h1>We provide best in class services and solutions</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia magni minus facere? Ad, blanditiis vero, velit debitis necessitatibus accusantium fuga ipsum consectetur sequi numquam quae delectus iure libero aspernatur quos!</p>
-                        <a class="btn btn-outline btn-secondary" href="#home"><i class="fas fa-chevron-right"></i> Read More</a>
+                        <a class="btn btn-outline btn-secondary" href="./blog.html"><i class="fas fa-chevron-right"></i> Read More</a>
                     </div>
                 </div>
                 <div class="column">
