--- a/blog.html
+++ b/blog.html
@@ -11,8 +11,8 @@
 </head>
 <body id="home">
     <header>
-        <div class="top-design">
-            <div id="navbar" class="navbar">
+        <div class="blog-html top-design">
+            <div id="navbar" class="navbar top">
                 <h1 class="logo">
                     <span class="text-primary"><i class="fas fa-coins"></i> Fin</span>Co
                 </h1>
@@ -110,5 +110,29 @@
             Copyright <i class="far fa-copyright"></i> 2020, Pranav Shukla
         </div>
     </footer>
+    <script>
+        const navbar = document.getElementById('navbar');
+        let scrolled = false;
+
+        window.onscroll = function(){
+            if(window.pageYOffset > 200){
+                navbar.classList.remove('top');
+              
+              /*  if(!scrolled){
+                    navbar.style.transform = 'translateY(0px)';                 
+                }
+                setTimeout(function(){
+                    navbar.style.transform = 'translateY(0)';
+                    scrolled = true;
+                }, 200);
+            */
+            }
+
+            else{
+                navbar.classList.add('top');
+                scrolled = false;
+            }
+        }
+    </script>
 </body>
 </html>
