--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="home">
     <header>
         <div class="top-design">
-            <div id="navbar" class="navbar">
+            <div id="navbar" class="navbar top">
                 <h1 class="logo">
                     <span class="text-primary"><i class="fas fa-coins"></i> Fin</span>Co
                 </h1>
@@ -202,5 +202,48 @@
             Copyright <i class="far fa-copyright"></i> 2020, Pranav Shukla
         </div>
     </footer>
+
+    <script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous">
+    </script>
+
+    <script>
+        const navbar = document.getElementById('navbar');
+        let scrolled = false;
+
+        window.onscroll = function(){
+            if(window.pageYOffset > 200){
+                navbar.classList.remove('top');
+             /*
+                if(!scrolled){
+                    navbar.style.transform = 'translateY(-70px)';                 
+                }
+                setTimeout(function(){
+                    navbar.style.transform = 'translateY(0)';
+                    scrolled = true;
+                }, 200);
+            */ 
+            }
+
+            else{
+                navbar.classList.add('top');
+                scrolled = false;
+            }
+        }
+
+        //smooth scrolling
+        $('#navbar a, .btn').on('click',function(e){
+            if(this.hash !== ''){
+                e.preventDefault();
+                const hash = this.hash;
+                $('html, body').animate(
+                    {
+                        scrollTop: $(hash).offset().top - 100,
+                    },800);
+            }
+        });
+    </script>
 </body>
 </html>
