--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/bb534c52d8.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="css\utilities.css">
     <link rel="stylesheet" href="css\style.css">
     <title>FinCo | Homepage</title>   
@@ -240,7 +241,7 @@
                 const hash = this.hash;
                 $('html, body').animate(
                     {
-                        scrollTop: $(hash).offset().top - 100,
+                        scrollTop: $(hash).offset().top - 70,
                     },800);
             }
         });
